--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "gitHead": "c0f6b27bcea5a2ad2e304d91c2e842e4076a6b03",
   "dependencies": {
     "jwa": "^2.0.0",
-    "safe-buffer": "^5.0.1"
+    "safe-buffer": "^5.0.1",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "semver": "^5.1.0",
